@@ -1,3 +1,5 @@
+= render 'devise/sessions/new_env' if env_enabled?
+
 .login-box
   %h3.page-title Sign in
   %br
